--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -186,7 +186,7 @@
 			</div>
 		</div>
 		<div id="videoPopover" class="mui-popover">
-			<video id="video" style="position: absolute;z-index: 999;">
+			<video id="video" style="position: absolute;z-index: 999;" controls="controls">
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
