--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -14,7 +14,7 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
-
+		
 	</head>
 
 	<body>
@@ -28,7 +28,7 @@
 			</div>
 		</header>
 		<div id="videoPopover" class="mui-popover">
-			<video id="video" style="position: absolute;z-index: 999;">
+			<video id="video" style="position: absolute;z-index: 999;" controls="controls">
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
@@ -79,7 +79,7 @@
 					if(events.judgeLoginMode(this)) {
 						return;
 					}
-					events.singleWebviewInPeriod(this,'../quan/pub-dynamic.html', 'jxq')
+					events.singleWebviewInPeriod(this, '../quan/pub-dynamic.html', 'jxq')
 					events.fireToPageNone('zonep_sub.html', 'hidePreImage')
 				})
 			})
