--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -25,7 +25,32 @@
 		<script type="text/javascript" src="../../js/quan/dynamiclistitem.js"></script>
 		<script type="text/javascript" src="../../js/utils/playutil.js"></script>
 		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
-
+		<style type="text/css">
+			.video-thumb {
+				/*视频缩略图*/
+				width: 50%;
+				visibility: hidden;
+			}
+			
+			.video-play {
+				/*播放按钮*/
+				position: absolute;
+				visibility: hidden;
+			}
+			
+			.mui-popover {
+				width: 100%;
+				height: 0px;
+				border-radius: initial;
+				background-color: transparent;
+				border: none;
+				box-shadow: none;
+			}
+			
+			.mui-backdrop {
+				background-color: transparent;
+			}
+		</style>
 	</head>
 
 	<body style="background-color: #f2f3f5;">
@@ -41,7 +66,7 @@
 
 		</div>
 		<div id="videoPopover" class="mui-popover">
-			<video id="video" style="position: absolute;z-index: 999;">
+			<video id="video" style="position: absolute;z-index: 999;" controls="controls">
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
